# fastapi-crud-project

./: .env.example  .env.production  .env.staging  .gitignore  Dockerfile  Makefile  README.md  check_db.py  pyproject.toml  run_dev.sh  validate_config.py
app/core/: config.py  db.py
docs/: README.md  REFACTORING-COMPLETE.md  TESTING_STATUS_REPORT.md  api.md  architecture.md  auth_testing_summary.md  database-best-practices.md  database-configuration.md  deployment.md  development.md  email-integration-completion-summary.md  email-utils-reorganization.md  environment.md  file-organization.md  getting-started.md  modern-password-hashing.md  script-reorganization-summary.md  troubleshooting.md  users_endpoints_debugging_summary.md
docs/blog-guide/: BLOG_APP_IMPLEMENTATION_SUMMARY.md  BLOG_TESTS_FIXTURE_FIX_GUIDE.md  SESSION_SUMMARY_2025-07-31.md  demo_blog_app_relocation_summary.md
docs/ddd-guide/: API-Design.md  Architecture.md  Best-Practices.md  Creating-Apps.md  Database.md  Demo-App.md  Implementation.md  Models-and-Schemas.md  Patterns.md  README.md  Services.md  Testing.md
frontend/src/: routeTree.gen.ts
frontend/src/client/: sdk.gen.ts  types.gen.ts
frontend/src/hooks/: useAuth.ts
frontend/src/routes/: recover-password.tsx  reset-password.tsx
notebooks/: auth_endpoints_testing.ipynb  blog_endpoints_testing.ipynb  demo_endpoints_testing.ipynb  email_functionality_demo.ipynb  fixed_logout_tests.py  users_endpoints_testing.ipynb
resources/: github.txt
scripts/: alembic.sh  backend_pre_start.py  db_health_check.py  db_manage.py  debug_reset.py  demo_blog_app.py  migrate.sh  prestart.sh  test_email_functionality.py  test_email_integration.py  test_live_email.py  tests-start.sh  tests_pre_start.py  validate_config.py
src/: initial_data.py  main.py
src/alembic/: env.py  script.py.mako
src/alembic/versions/: 23202aace4b1_add_auth_models.py  425b97d9ed0c_add_demo_app_models.py  67ae2b096854_blog_app_working.py  9cee985b3695_update_user_model_separate_names.py  9e0d977dd763_remove_old_tables_cleanup.py  ba49484a9a0d_add_blog_app_models.py  c71ff493a874_add_blog_post_tag_association_table.py
src/api/: deps.py  router.py
src/apps/: __init__.py  shared.py
src/apps/auth/: urls.py  (+6 more)
src/core/: config.py  database.py  dependencies.py  security.py  security_argon2.py  security_unified.py
src/tests/: conftest.py
src/utils/: __init__.py  auth.py  common.py  email.py
(+48 files in other folders)
